Multiple bug fixes

--- a/src/app/components/main/dashboard/dashboard.html
+++ b/src/app/components/main/dashboard/dashboard.html
@@ -149,11 +149,11 @@
 				<div class="appointment" ng-repeat="appointment in vm.brokerAppointments|orderBy:'-startTime'|limitTo:10">
 					<img ng-if="appointment.avatar" style="width:120px;padding-right: 20px;align-self: flex-start;" ng-src="{{message.avatar}}">
 					<div class="avatar-circle" ng-if="!appointment.avatar">
-							{{appointment.userFirstname|limitTo:1|capitalize}}
-							{{appointment.userLastname|limitTo:1|capitalize}}
+							{{appointment.userFirstName|limitTo:1|capitalize}}
+							{{appointment.userLastName|limitTo:1|capitalize}}
 					</div>
 					<div class="detail">
-						<div style="font-size: 14px;">{{appointment.userFirstname}} {{appointment.userLastname}}</div>
+						<div style="font-size: 14px;">{{appointment.userFirstName}} {{appointment.userLastName}}</div>
 						<div style="opacity: 0.4; margin-top: 3px;font-size: 13px;">{{appointment.displayTime}}</div>
 						<a class="conference-btn">Start Conference</a>
 					</div>
