--- a/src/app/components/main/dashboard/dashboard.scss
+++ b/src/app/components/main/dashboard/dashboard.scss
@@ -56,7 +56,7 @@
                 flex-flow: row wrap;
                 margin-top: 7px;
                 min-height: 150px;
-                max-height: 200px;
+                max-height: 50vh;
                 overflow: auto;
                 padding-right: 20px;
                 .appointment {
@@ -86,7 +86,7 @@
     		flex-grow: 1;
             flex-flow: column;
             .message-container {
-                min-height: 300px;
+                min-height: 260px;
                 max-height: 400px;
                 overflow: auto;
                 padding-right: 20px;
@@ -192,7 +192,7 @@
                 flex-flow: row wrap;
                 margin-top: 7px;
                 min-height: 150px;
-                max-height: 200px;
+                max-height: 50vh;
                 overflow: auto;
                 .appointment {
                     display: flex;
@@ -229,7 +229,7 @@
             flex-grow: 1;
             flex-flow: column;
             .message-container {
-                min-height: 300px;
+                min-height: 260px;
                 max-height: 400px;
                 overflow: auto;
                 padding-right: 20px;
