--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -42,10 +42,10 @@
              <div class="contact-brokerage">
                 <div style="position: relative;display: flex; flex-flow: column;">
                     <h2 style="color:white;">Brokerage Applications</h2>
-                    <input type="text" placeholder="Search"> 
+                    <input type="text" placeholder="Search" ng-model="vm.searchBrokerageApplications" type="search" ng-change="vm.changeBrokerageApplications()" > 
                     <img src="/assets/images/search.png" alt="Search" style="position: absolute;right:2px;top:40px;">   
                     <div style="display: flex;flex-flow: column;color:white;">
-                        <div style="display: flex;border: none;border-radius: 3px;padding: 20px;padding-left:0px;margin-bottom: 10px;" ng-repeat="item in vm.contactedBrokers|limitTo:3">
+                        <div style="display: flex;border: none;border-radius: 3px;padding: 20px;padding-left:0px;margin-bottom: 10px;" ng-repeat="item in vm.filteredContactedBrokers|limitTo:3">
                             <img style="width: 70px; background:white; border-radius:3px;height:36px;margin-right: 15px; padding: 5px;" ng-src="/assets/images/partnerLogos/{{item.brokerageId}}.png" alt="">
                             <div style="display: flex; flex-flow: column;">
                                 <div style="font-size: 14px;">{{item.brokerageId}}
