show ticked mark for selected brokerage partners

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -15,6 +15,10 @@
     background: url(../../../../assets/images/untickedgrey.png) no-repeat;
     background-size: 34px;
 }
+.partnerLogo.selected {
+    outline: none;
+    background: url(../../../../assets/images/ticked.png) no-repeat;
+}
 </style>
 
 <div layout="row" class="mainArea">
