- Contacted user section to have a scroll bar.

--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -25,7 +25,7 @@
 	.right-stat {
 		order: 2;
 		width: 240px;
-		overflow: hidden;
+		overflow: scroll;
 		position:relative;
 		min-height: calc(100vh - 100px);
 		.contact-brokerage
