added attach x 2 buttons

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -346,6 +346,10 @@
                 <div class="datetime">{{message.date | date:'dd MMM yy, HH:mm a'}}</div>
             </div>
         </div>
-        <input type="text" name="compose" placeholder="Add your message" class="input" style="margin: 10px;margin-left:18px;padding: 10px;border-radius: 7px;z-index: 3;border: none;outline: none;box-shadow: none;">
+        <div style="z-index: 3;">
+            <img src="/assets/images/clip.png" style="position: absolute; right: 55px; height: 24px; margin-top: 16px;" />
+            <img src="/assets/images/clip.png" style="position: absolute; right: 30px; height: 24px; margin-top: 16px;" />
+            <input type="text" name="compose" placeholder="Add your message" class="input" style="margin: 10px;margin-left:18px;padding: 10px;border-radius: 7px;z-index: 3;border: none; outline: none;box-shadow: none; width: 218px;">
+        </div>
     </div>
 </div>
