Change password fixes

--- a/src/app/components/main/settings/change-password.html
+++ b/src/app/components/main/settings/change-password.html
@@ -1,14 +1,15 @@
 <form name="changePassword">
 	<div class="cpinput">
 		<label for="current">Current Password</label>
-		<input name="current" placeholder="Current Password" type="password">
+		<input name="current" placeholder="Current Password" type="password" ng-model="vm.details.userPassword">
 	</div>
 	<div class="cpinput">
 		<label for="new">New Password</label>
-		<input name="new" placeholder="New Password (min 8 char)" type="password">
+		<input name="new" placeholder="New Password (min 8 char)" type="password" ng-model="vm.details.newPassword">
 	</div>
 	<div class="cpinput">
 		<label for="confirm">Confirm Password</label>
-		<input name="confirm" placeholder="Confirm Password" type="password">
+		<input name="confirm" placeholder="Confirm Password" type="password" ng-model="vm.details.confirmPassword">
 	</div>
+	<p class="error">{{vm.details.error}}</p>
 </form>
