--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -185,7 +185,7 @@
                     </div>
                     
                     <h3 class="partnersHeader">All Partners</h3>
-                    <div style="display: flex; width: 100%; justify-content: center;">
+                    <div style="display: flex; width: 100%; justify-content: center; flex-wrap:wrap;">
                     <div ng-repeat="partner in ::vm.partners | filter:{brokerageCategory:'REGULAR'}" style="margin: 20px;">
                         <div class="partnerLogo" ng-click="vm.toggleSelected(partner)" ng-class="{'selected': partner.selected , 'deactivated': partner.status}">
                             <center><img ng-src="{{partner.img}}"/></center>
