--- a/src/app/components/main/brokerage/dialog.html
+++ b/src/app/components/main/brokerage/dialog.html
@@ -1,10 +1,10 @@
-<md-dialog aria-label="List dialog">
-  <md-dialog-content style="max-width:500px; width: 90%;  margin: auto; height:400px; background: white;">
+<md-dialog aria-label="List dialog" style="max-width:500px; width: 90%;">
+  <md-dialog-content style="margin: auto; height:400px; width: 100%; background: white;">
 <div class="inviteUsersDialog">
  <span class="heading">Invite</span>
  <hr/>
  <form name="projectForm" style="overflow:hidden;">
-	 <md-input-container class="md-block" style="margin-top: 30px; float: left; width: 380px; max-width: 90%; font-size: 14px;">
+	 <md-input-container class="md-block" style="margin-top: 30px; float: left; width: 100%; font-size: 14px;">
         <label>Add email address here to invite…
         </label>
         <input type="email" name="extraEmail" ng-model="extraEmail"
