--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -309,11 +309,7 @@
         <footer style="position: fixed; bottom: 40px; z-index: 0; background: none;">
             <div layout="row" class="footerBtns" layout-align="start center" ng-if="!isBroker">
                 <md-button class="md-raised md-back" ng-click="vm.backStep()" ng-show="vm.getActiveStep()>1">Back</md-button>
-                <md-button ng-if="!isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.getActiveStep()==5 && !vm.timeslotSelected) || (vm.getActiveStep()==1 && selectedPartners.length==0)">
-                    <span ng-show="vm.getActiveStep()<5">Next</span>
-                    <span ng-show="vm.getActiveStep()==5">Submit</span>
-                </md-button>
-                <md-button ng-if="isBroker" class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.getActiveStep()==5 && !vm.timeslotSelected) || (vm.getActiveStep()==1)">
+                <md-button class="md-raised md-success" ng-click="vm.nextStep()" ng-disabled="(vm.getActiveStep()==5 && !vm.timeslotSelected) || (vm.getActiveStep()==1 && selectedPartners.length==0)">
                     <span ng-show="vm.getActiveStep()<5">Next</span>
                     <span ng-show="vm.getActiveStep()==5">Submit</span>
                 </md-button>
