--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -172,8 +172,10 @@
 				margin: 5px 20px 10px 20px;
 			}
 
-			.footerBtns {
-				margin: 15px;
+			#bottomFooter {
+				.footerBtns {
+					margin: 15px;
+				}
 			}
 
 			md-input-container.md-block {
