--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -11,6 +11,12 @@
 	md-select-value {
 	    margin-top: -15px;
 	}
+	md-option {
+		height: 80px;
+		padding: 15px;
+		padding-bottom: 20px;
+		padding-top: 0px;
+	}
 }
 @media (max-width: 600px) {
 	#bottomFullFooter {
