fixed css for calendar dialog

--- a/src/app/components/main/calendar/dialog.html
+++ b/src/app/components/main/calendar/dialog.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="List dialog">
-  <md-dialog-content style="width:400px; overflow: hidden;">
+  <md-dialog-content style="width:400px; max-width: 90%; overflow: hidden;">
     <div style="position: fixed; right: 10px; top: 10px;" ng-click="closeDialog()"><img src="/assets/images/close-message.png" /></div>
     <div class="dialog-content-broker calendarPopup" style="padding: 20px; padding-left: 35px;" flex layout="column">
     <div flex layout="row" style="min-height: 40px;margin-top: 30px;">
