fixed charts container mobile for requests dashboard

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -134,7 +134,7 @@
                     </div>
                 </div>
             </div>
-            <div layout="row" style="margin: 20px; ">
+            <div layout="row" class="dashClassAfterElements">
             <div flex="50" style="margin-right: 30px; ">
                 <span class="title">Download Documents</span>
                 <div class="document-container">
