--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -34,6 +34,9 @@
 		background-color: rgba(240,240,240,1);
 		}
 	}
+	.mainArea md-step-body {
+	    max-height: 100vh;
+	}
 	.rightSide {
 		display: none;
 	}
