responsive appointment slots

--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -163,7 +163,7 @@
                     </a>
                 </div>
             </div>
-            <div class="dashClassAfterElementsChild">
+            <div class="dashClassAfterElementsChild" style="max-height: 400px;overflow-y: scroll;overflow-x: hidden;">
                 <span class="title">Appointment Slots</span>
                 <div style="font-size: 12px;margin-top: 10px;" ng-if="!vm.userSlots.length">
                     No Appointments
