--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -191,6 +191,7 @@
         <div ng-if="!isBroker">
             <md-step md-label="Select Broker">
                 <md-step-body layout="row" layout-wrap>
+                    <div class="mainHeader">Select Broker</div>
                     <h3 class="partnersHeader">Premium Partners</h3>
                     <div style="display: flex; flex-flow: row wrap; justify-content: center;width: 100%;">
                         <div ng-repeat="partner in ::vm.partners | filter:{brokerageCategory:'PREMIUM'}">
@@ -229,6 +230,7 @@
         <div ng-if="isBroker || !isBroker">
             <md-step md-label="Documents">
                 <md-step-body>
+                    <div class="mainHeader">Documents</div>
                     <div class="flex-wrapper" style="height: calc(100vh - 90px); margin-bottom: -90px; margin-top: 20px;">
                         <div ng-repeat="document in ::vm.documents">
                             <document-pane is-broker="isBroker" style="float: left;" document="document" user-id="vm.userAppointment.email"></document-pane>
@@ -241,6 +243,7 @@
         <div ng-if="!isBroker">
             <md-step md-label="Personal Details">
                 <md-step-body>
+                    <div class="mainHeader">Personal Details</div>
                     <profile-form ng-class="{error:personalDetailsError}" is-broker="isBroker" user-email-id="vm.userAppointment.email"/>
                 </md-step-body>
             </md-step>
@@ -248,6 +251,7 @@
         <div ng-if="!isBroker">
             <md-step md-label="KYC">
                 <md-step-body>
+                    <div class="mainHeader">KYC</div>
                     <kyc-form ng-class="{error:vm.kycerror}"/>
                 </md-step-body>
             </md-step>
@@ -255,16 +259,17 @@
         <div ng-if="!isBroker">
             <md-step md-label="Selection of Timeslot">
                 <md-step-body layout="column" flex>
+                    <div class="mainHeader">Selection of Timeslot
+                        <div class="subText">Please select the time slots for brokerage document verification meeting.</div>
+                    </div>
                     <div ng-repeat="partner in selectedPartners" style="margin-top: 30px;">
                         <div class="partnerMenu" layout="row" flex ng-click="vm.toggleShowPartner($index)">
-                            <div flex="10"><img ng-src="{{partner.img}}" alt="{{partner.brokerageName}}" class="partnerLogoSmall" /></div>
+                            <div flex="10" class="parentPartnerLogoSmall"><img ng-src="{{partner.img}}" alt="{{partner.brokerageName}}" class="partnerLogoSmall"/></div>
                             <div flex="90" class="partnerTitle">{{partner.brokerageName}}</div>
                             <div flex="5"><img class="calicon" src="../../../../assets/images/calendaricon.png"/></div>
                         </div>
                         <div layout="row" flex ng-show="partner.showCalendar">
-                            <div flex="70">
-                            <!--     md-show-create-link="true" md-create-event-click="vm.eventCreate($date)" md-create-disabled="dis"
-                             -->
+                            <div class="mainCalBrokerage">
                                 <md-event-calendar md-events="vm.events" md-event-click="vm.eventClicked($selectedEvent, $index)" md-label="title"
                                 class="md-primary" style="margin-top: 2px;">
                                     <md-event-calendar-header class="md-center">
@@ -274,7 +279,7 @@
                                     </md-event-calendar-header>
                                 </md-event-calendar>
                             </div>
-                            <div flex="30" class="meetingDetails">
+                            <div class="meetingDetails">
                                 <div class="meetingDetailsHeading">Meeting Details</div>
                                 <div class="meetingDetailsContent" layout="row" flex ng-repeat="slot in selectedPartners[$index]['selectedAppointments']">
                                     <div flex="10"><img src="../../../../assets/images/clockicon.png" width="24" /></div>
