--- a/src/app/components/main/brokerage/brokerage.responsive.scss
+++ b/src/app/components/main/brokerage/brokerage.responsive.scss
@@ -29,15 +29,46 @@
 /*	max-width: 40%;
 	min-width: 280px;
 */}
+.mainCalBrokerage {
+    -ms-flex: 1 1 70%;
+    flex: 1 1 70%;
+    max-width: 70%;
+    max-height: 100%;
+    box-sizing: border-box;	
+}
 @media (max-width: 600px) {
 	#bottomFullFooter {
 		.md-button.md-default-theme.md-raised[disabled], .md-button.md-raised[disabled], .md-button.md-default-theme.md-fab[disabled], .md-button.md-fab[disabled] {
 		background-color: rgba(240,240,240,1);
 		}
 	}
+	.parentPartnerLogoSmall {
+		max-width: inherit !important;
+	}
+	.md-event-calendar-cell-event-show-more-link {
+	    /*margin-top: -6px;*/
+	    cursor: pointer;
+	    text-align: right;
+	}
+	.mainArea .partnerMenu {
+		margin-left: 0px;
+	}
+	.mainArea md-event-calendar {
+		margin: 0px;
+	}
+	.meetingDetails {
+		display: none;
+	}
+	.mainCalBrokerage {
+	    -ms-flex: 1 1 100%;
+	    flex: 1 1 100%;
+	    max-width: 100%;
+	    max-height: 100%;
+	    box-sizing: border-box;			
+	}
 	.mainArea md-step-body {
 	    max-height: calc(100vh - 140px);
-	    padding-bottom: 20px;
+	    padding-bottom: 60px;
 	}
 	.rightSide {
 		display: none;
