--- a/src/app/components/main/brokerage/brokerage.scss
+++ b/src/app/components/main/brokerage/brokerage.scss
@@ -1,3 +1,21 @@
+md-step-body {
+	padding-bottom: 60px;
+}
+
+.mainHeader {
+  font-family: Lato;
+  font-size: 18px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  color: #4f6379;
+  line-height: 22px;
+  margin: 18px 0px 20px 20px;
+  .subText {
+  	opacity: 0.4;
+  }
+}
+
 .md-steppers-horizontal .md-stepper-indicator {
 	flex-basis: 20%;
 	flex-grow: 0;
@@ -584,6 +602,13 @@
 	margin-left: -27px;
 	border: solid 1px #e7ecf1;
 	margin-bottom: 30px;
+	-webkit-flex: 1 1 10%;
+    -ms-flex: 1 1 10%;
+    flex: 1 1 10%;
+    max-width: 10%;
+    max-height: 100%;
+    box-sizing: border-box;
+
 	.meetingDetailsHeading {
 		padding: 24px;
 		border-bottom: solid 1px #e7ecf1;
