--- a/src/app/components/main/brokerage/brokerage.html
+++ b/src/app/components/main/brokerage/brokerage.html
@@ -87,7 +87,7 @@
                 </md-option>
             </md-select>
         </div>
-        <md-stepper  ng-click="vm.check()" id="stepper-demo" ng-class="{'rightSideBar': isBroker}" md-linear="!isBroker" style="padding-bottom: 120px;outline: none;">
+        <md-stepper  ng-click="vm.check()" id="stepper-demo" ng-class="{'rightSideBar': isBroker}" md-linear="!isBroker" style="outline: none;">
         <div ng-if="isBroker">
         <md-step md-label="Account Summary" class="accSummary">
             <md-step-body layout="column" class="accSumStep">
@@ -265,8 +265,13 @@
                     <div ng-repeat="partner in selectedPartners" style="margin-top: 30px;">
                         <div class="partnerMenu" layout="row" flex ng-click="vm.toggleShowPartner($index)">
                             <div flex="10" class="parentPartnerLogoSmall"><img ng-src="{{partner.img}}" alt="{{partner.brokerageName}}" class="partnerLogoSmall"/></div>
-                            <div flex="90" class="partnerTitle">{{partner.brokerageName}}</div>
-                            <div flex="5"><img class="calicon" src="../../../../assets/images/calendaricon.png"/></div>
+                            <div flex="90" class="partnerTitle">{{partner.brokerageName}}
+                                <div class="meetingDetailsContent mobile" layout="row" flex ng-repeat="slot in selectedPartners[$index]['selectedAppointments']">
+                                    <div flex="10" class="timeclock"><img src="../../../../assets/images/clockicon.png" width="24" /></div>
+                                    <div flex="90" class="timings">Time slot - {{slot | date:'MMM dd, yyyy HH:mm a'}}</div>
+                                </div>
+                            </div>
+                            <div flex="5" class="parentPartnerLogoSmall"><img class="calicon" src="../../../../assets/images/calendaricon.png"/></div>
                         </div>
                         <div layout="row" flex ng-show="partner.showCalendar">
                             <div class="mainCalBrokerage">
