--- a/src/app/components/access/forgot-password/forgot-password.html
+++ b/src/app/components/access/forgot-password/forgot-password.html
@@ -1,6 +1,6 @@
 <form  name="forgetPasswordForm"  class="forgot-password-container" ng-submit="vm.resetPassword()">
 	<div ng-show="!vm.reset" style="text-align: center;">
-		<div style="font-size: 18px; line-height: 32px; text-align: center; margin-top: 10px;">
+		<div class="heading">
 			One time verification link sent to your email id.
 		</div>
 		<input type="email" ng-model="username" placeholder="Email Address" required>
