--- a/src/app/components/access/access.scss
+++ b/src/app/components/access/access.scss
@@ -8,6 +8,10 @@
     font-size: 16px;
     margin-bottom: 45px;
     margin-top: 20px;
+    font-size: 15px;
+    .extension {
+        font-size: 15px;
+    }
     .access-container {
     	border: 1px solid #e7ecf1;
     	border-radius: 5px;
@@ -16,6 +20,22 @@
     	margin-top: 45px;
     	width: 540px;
     	align-items: center; 
+        .heading {
+            font-size: 18px;
+            width: calc(100vw - 60px);
+            line-height: 32px;
+            text-align: center;
+            margin-top: 10px;
+            max-width: 434px;
+        }
+        .phonegroup {
+            input[type=phone] {
+                width: 290px;
+            }
+            select {
+                height: 60px;
+            }
+        }
     }
     .overlay {
         background-color: rgba(0,0,0, 0.25);
