--- a/src/app/components/access/change-password/change-password.html
+++ b/src/app/components/access/change-password/change-password.html
@@ -1,5 +1,5 @@
 <form name="setPasswordForm" class="signin-container" ng-submit="vm.changePassword()">
-	<div style="font-size: 24px; line-height: 32px; margin-top: 50px;text-align:center;"> 
+	<div class="heading"> 
 		OTP sent to your hand phone number. <br>
 		Kindly set new password to proceed.
 	</div>
@@ -27,5 +27,5 @@
 		</div>		
 	</div>
 	<p class="error" ng-if="setPasswordForm.$valid && vm.invalidCredentials">Passwords didn't match</p>
-	<input type="submit" class="button" value="Set Password">
+	<input type="submit" class="button" style="margin-bottom: 15px;" value="Set Password">
 </form>
