--- a/src/app/components/access/signin/signin.responsive.scss
+++ b/src/app/components/access/signin/signin.responsive.scss
@@ -7,26 +7,33 @@
 	    input {
 	    	border: 1px solid #e7ecf1;
 		    border-radius: 3px;
-		    width: 400px;
-		    height: 60px;
-		    padding: 20px;
+		    width: calc(100vw - 95px);
+		    height: 50px;
+		    padding: 15px;
 		    color: #7b868a;
-		    margin-top: 25px;
+		    margin-top: 20px;
+		    &.checkbox {
+		        width: 17px;
+			    height: 17px;
+			    margin-top: 0;
+			    border: solid 1px #e7ecf1;
+			    background: white;
+		    }
 	    }
 	    .error {
 	    	font-size: 12px;
 	    	line-height: 18px;
-	    	width: 400px;
-	    	margin-top: 10px;
+	    	width: calc(100vw - 95px);
+	    	margin-top: 8px;
 	    }
 	    .password {
 	    	position: relative;
 	    	.forgot-password {
 	    		position: absolute;
-			    top: 47px;
+			    top: 42px;
 			    right: 20px;
 			    text-decoration: none;
-			    font-size: 14px;
+			    font-size: 12px;
 			    color: #4f6379;
 			    opacity: 0.7;
 			    cursor: pointer;
@@ -34,23 +41,23 @@
 	    }
 
 	    .button {
-		   	    width: 400px;
+		    	width: calc(100vw - 95px);
 			    cursor: pointer;
 			    background: #3aafa5;
 			    color: white;
-			    height: 60px;
+			    height: 50px;
 			    text-align: center;
 			    vertical-align: middle;
-			    padding: 20px;
-			    margin-top: 25px;
+			    padding: 15px;
+			    margin-top: 15px;
 			    border-radius: 3px;
 			    text-decoration: none;
-			    font-size: 18px;
+			    font-size: 15px;
 			    font-weight: 500;
 			    border: none;
 			    outline: none;
 			    line-height: 20px;
-			    margin-bottom: 40px;
+			    margin-bottom: 0px;
 		    &:hover {
 				background-color: #2e8e86;
 		    }
