--- a/src/app/components/access/signup/signup.responsive.scss
+++ b/src/app/components/access/signup/signup.responsive.scss
@@ -12,11 +12,11 @@
 	    input {
 	    	border: 1px solid #e7ecf1;
 		    border-radius: 3px;
-		    width: 400px;
-		    height: 60px;
-		    padding: 20px;
+		    width: calc(100vw - 95px);
+		    height: 50px;
+		    padding: 15px;
 		    color: #7b868a;
-		    margin-top: 25px;
+		    margin-top: 20px;
 		    &.checkbox {
 		        width: 17px;
 			    height: 17px;
@@ -28,21 +28,21 @@
 	    .error {
 	    	font-size: 12px;
 	    	line-height: 18px;
-	    	width: 400px;
-	    	margin-top: 10px;
+	    	width: calc(100vw - 95px);
+	    	margin-top: 8px;
 	    }
 	    .button {
-		   	width: 400px;
+		    width: calc(100vw - 95px);
 		    background: #3aafa5;
 		    color: white;
-		    height: 60px;
+		    height: 50px;
 		    text-align: center;
 		    vertical-align: middle;
-		    padding: 20px;
-		    margin-top: 25px;
+		    padding: 15px;
+		    margin-top: 20px;
 		    border-radius: 3px;
 		    text-decoration: none;
-		    font-size: 18px;
+		    font-size: 16px;
 		    font-weight: 500;
 		    &:hover {
 				background-color: #2e8e86;
