--- a/src/app/components/main/main.html
+++ b/src/app/components/main/main.html
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 
-		<div class="navigation">
+		<div class="navigation-wrapper">
 			<navigation />			
 		</div>
 		<div class="area">
